# wren-engine

./: .gitignore  .release-please-manifest.json  AGENTS.md  README.md  RELEASING.md  pom.xml  release-please-config.json
ibis-server/: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.jupyter  Makefile  Metrics.md  README.md  data_source.py  dto.py  entrypoint.sh  justfile  pyproject.toml  requirements.txt  test_default_oracle.py  test_interval_support.py  test_oracle_views.py  test_timestamptz_issue.py
ibis-server/.claude/: CLAUDE.md
ibis-server/app/: config.py  data_source.py  dependencies.py  logger.py  main.py  util.py  worker.py
ibis-server/app/mdl/: analyzer.py  context.py  core.py  http.py  java_engine.py  knowledge.py  replacer.py  rewriter.py  substitute.py  transpilation.py
ibis-server/app/middleware/: __init__.py  process_time.py  request_log.py
ibis-server/app/model/: __init__.py  connector.py  coordinator.py  data_source.py  dto.py  error.py  mdl.py  metadata.py  metadata_dto.py  oracle_backend_patch.py  querier.py  utils.py  validator.py
ibis-server/app/query_cache/: __init__.py  manager.py
ibis-server/app/routers/: ibis.py
ibis-server/docs/: CONTRIBUTING.md  development.md  how-to-add-data-source.md  oracle_19c_dialect.md
ibis-server/notebooks/: demo.ipynb
ibis-server/python/tests/: test_main.py  test_modeling_core.py
ibis-server/python/wren_engine/: config.py  logger.py  main.py
ibis-server/resources/demo/: jaffle_shop.duckdb  jaffle_shop_mdl.json
ibis-server/resources/function_list/: bigquery.csv  canner.csv  clickhouse.csv  doris.csv  duckdb.csv  mssql.csv  mysql.csv  oracle.csv  postgres.csv  redshift.csv  snowflake.csv  spark.csv  trino.csv
ibis-server/resources/fuzzing/: bigquery.json  mysql.json  postgres.json
ibis-server/resources/knowledge/: sql_correction_rule.txt  text_to_sql_rule.txt  text_to_sql_rules.txt
ibis-server/resources/white_function_list/: bigquery.csv  mysql.csv  postgres.csv
ibis-server/routers/: ibis.py
ibis-server/rust/: Cargo.toml
ibis-server/rust/src/: errors.rs  lib.rs
ibis-server/src/: lib.rs  main.py  wrapper.rs
ibis-server/src/routers/: __init__.py
ibis-server/tests/: confest.py  conftest.py  test_clickhouse_type_mapping.py  test_main.py  util.py
ibis-server/tests/custom_sqlglot/: conftest.py  test_oracle_19c_date_arithmetic.py  test_oracle_19c_dialect.py  test_oracle_19c_integration.py  test_oracle_19c_standalone.py  test_oracle_19c_type_mapping.py  test_oracle_pagination.py
ibis-server/tests/mdl/: test_context.py
ibis-server/tests/mock_canner_web_server/: __init__.py  graphql_server.py
ibis-server/tests/model/: __init__.py
ibis-server/tests/resource/: functions.csv
ibis-server/tests/routers/: conftest.py  test_analysis.py  test_ibis.py
ibis-server/tests/util/: __init__.py  csv_parser.py  sql_generator.py
ibis-server/tools/: README.md  function_fuzz_testing.py  generate_openapi.py  mdl_validation.py  query_local_run-v2.py  query_local_run.py  remote_function_check.py  update_databricks_functions.py  white_remote_function.py
ibis-server/tools/data_source/: mysql.py  mysql_5.py  postgres.py
ibis-server/wren/: __init__.py  __main__.py
ibis-server/wren/session/: __init__.py
mcp-server/: .env.example  CHANGELOG.md  README.md  justfile  mdl.schema.json  pyproject.toml
mcp-server/.claude/: CLAUDE.md
mcp-server/app/: dto.py  mdl_tools.py  utils.py  web.py  wren.py
mcp-server/app/templates/: _fields.html  index.html
mcp-server/docker/: compose.yaml
mcp-server/etc/: config.properties
wren/: CHANGELOG.md  README.md  justfile  pyproject.toml
wren-agent/: .env.example  README.md  pyproject.toml
wren-agent/src/wren_agent/: __init__.py  agent.py  deps.py  memory.py  models.py  prompts.py  skills.py
wren-agent/tests/: test_agent.py
wren-core/: Cargo.toml  README.md
wren-core-py/: .dockerignore  CHANGELOG.md  Cargo.toml  README.md  justfile  pyproject.toml
wren-core-py/.claude/: CLAUDE.md
wren-core-py/scripts/: publish.sh
wren-core-py/src/: context.rs  errors.rs  extractor.rs  lib.rs  manifest.rs  remote_functions.rs
wren-core-py/src/fuzz_case_generator/: mod.rs
wren-core-py/tests/: functions.csv  test_modeling_core.py
wren-core/.claude/: CLAUDE.md
wren-core/benchmarks/: README.md
wren-core/benchmarks/mdls/: q1.json
wren-core/benchmarks/src/: lib.rs
wren-core/core/: Cargo.toml
wren-core/core/src/: lib.rs
wren-core/sqllogictest/: Cargo.toml
wren-core/sqllogictest/src/: test_context.rs
wren-core/sqllogictest/test_files/: bigquery_features.slt  model.slt
wren-core/wren-example/: Cargo.toml  README.md
wren-core/wren-example/examples/: calculation-invoke-calculation.rs  datafusion-apply.rs  demo_site.rs  plan-sql-json.rs  plan-sql.rs  row-level-access-control.rs  row_level_access_control.rs  row_level_access_control.rs.rs  to-many-calculation.rs  view.rs
wren-modeling-py/: Cargo.toml  README.md  justfile  pyproject.toml
wren-modeling-py/src/: errors.rs  lib.rs  remote_functions.rs  utils.rs
wren-modeling-py/tests/: functions.csv  test_modeling_core.py
wren-modeling-rs/: .gitignore  Cargo.toml  README.md
wren-modeling-rs/benchmarks/: Cargo.toml  bench.sh
wren-modeling-rs/core/: Cargo.toml
wren-modeling-rs/core/src/: lib.rs  main.rs
wren-modeling-rs/sqllogictest/: Cargo.toml
wren-modeling-rs/sqllogictest/src/: lib.rs  test_context.rs
wren-modeling-rs/sqllogictest/test_files/: model.slt  view.slt
wren-modeling-rs/sqllogictest/test_sql_files/: model.slt  view.slt
wren-modeling-rs/src/: lib.rs  main.rs  mdl.rs
wren-modeling-rs/src/logical_plan/: context_provider.rs  mod.rs  rule.rs  utils.rs  wren_context_provider.rs
wren-modeling-rs/src/mdl/: builder.rs  lineage.rs  mod.rs  (+2 more)
wren-modeling-rs/wren-example/: Cargo.toml  README.md
wren/.claude/: CLAUDE.md
wren/docs/: cli.md  connections.md  wren_project.md
wren/scripts/: publish.sh
wren/tests/: conftest.py  test_field_registry.py  test_profile.py  test_profile_cli.py  test_profile_web.py
(+3096 files in other folders)
