[project]
name = "mcp-server"
version = "0.24.6"
description = "MCP server exposing Wren Engine to AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.19.0",
    "orjson>=3.11.7",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "PyJWT>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
]

