[package]
name = "wren-core-py"
version = "0.1.0"
edition = "2021"
include = ["/src", "pyproject.toml", "Cargo.toml", "Cargo.lock"]

[lib]
name = "wren_core_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = [
  "extension-module",
  "generate-import-lib",
] }
wren-core = { path = "../wren-core/core" }
base64 = "0.22.1"
serde_json = "1.0.117"
thiserror = "1.0"
csv = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
tokio = "1.40.0"

[build-dependencies]
pyo3-build-config = "0.21.2"
