[package]
name = "wren-core-py"
version = "0.1.0"
edition = "2021"
include = ["/src", "pyproject.toml", "Cargo.toml", "Cargo.lock"]

[lib]
name = "wren_core_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module"] }
wren-core = { path = "../wren-core/core" }
wren-core-base = { path = "../wren-core-base", features = ["python-binding"] }
base64 = "0.22.1"
serde_json = "1.0.117"
thiserror = "2.0.3"
csv = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
tokio = "1.46.0"

[dev-dependencies]
rstest = "0.23.0"

[build-dependencies]
pyo3-build-config = "0.23.3"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
