[project]
name = "wren-core-py"
classifiers = ["Programming Language :: Python :: 3.11"]

[tool.poetry]
name = "wren-core-py"
version = "0.1.0"
description = ""
authors = ["Canner <dev@cannerdata.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
maturin = "1.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"

[tool.maturin]
module-name = "wren_core"
include = [{ path = "Cargo.lock", format = "sdist" }]
exclude = ["tests/**", "target/**"]
locked = true

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
