[workspace]
members = ["benchmarks", "core", "sqllogictest", "wren-example"]
resolver = "2"

[workspace.package]
authors = ["Canner <dev@cannerdata.com>"]
edition = "2021"
homepage = "https://getwren.ai"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Canner/wren-engine"
rust-version = "1.78"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1.89"
datafusion = { git = "https://github.com/Canner/datafusion.git", branch = "canner/v49.0.1" }
env_logger = "0.11.3"
hashbrown = "0.16.0"
insta = { version = "1.41.1" }
log = { version = "0.4.14" }
serde = { version = "1.0.201", features = ["derive", "rc"] }
serde_json = { version = "1.0.117" }
serde_with = { version = "3.11.0" }
tokio = { version = "1.46", features = ["rt", "rt-multi-thread", "macros"] }
wren-core = { path = "core" }
wren-core-base = { path = "../wren-core-base" }
