[package]
name = "wren-modeling-py"
version = "0.1.0"
edition = "2021"
include = ["/src", "pyproject.toml", "Cargo.toml", "Cargo.lock"]

[lib]
name = "wren_modeling_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "generate-import-lib"] }
wren-core = { path = "../wren-modeling-rs/core" }
base64 = "0.22.1"
serde_json = "1.0.117"
thiserror = "1.0"

[build-dependencies]
pyo3-build-config =  "0.21.2"
