[workspace]
members = ["core", "sqllogictest", "wren-example"]
resolver = "2"

[workspace.package]
authors = ["Canner <dev@cannerdata.com>"]
edition = "2021"
homepage = "https://getwren.ai"
license = "Apache-2.0"
readme = "README.md"
repository = "https://https://github.com/Canner/wren-engine"
rust-version = "1.78"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1.80"
datafusion = { version = "39.0.0" }
env_logger = "0.11.3"
log = { version = "0.4.14" }
petgraph = "0.6.5"
petgraph-evcxr = "*"
serde = { version = "1.0.201", features = ["derive", "rc"] }
serde_json = { version = "1.0.117" }
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
wren-core = { path = "core" }
