[package]
name = "wren-core"
include = ["src/**/*.rs", "Cargo.toml"]
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[lib]
name = "wren_core"
path = "src/lib.rs"

[dependencies]
arrow-schema = { workspace = true }
datafusion = { workspace = true }
petgraph = "0.6.5"
petgraph-evcxr = "*"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
